ttv-tools/settings.css
/* ... */
[success] .save:hover, [confirm] .save:hover {
    background-color: var(--green-highlighted);
}

[warning] .save:hover, [caution] .save:hover, [prompt] .save:hover {
    background-color: var(--yellow-highlighted);
}

[error] .save:hover, [danger] .save:hover {
    background-color: var(--red-highlighted);
}

[attention] .save.spin, [alert] .save.spin {
    background-color: var(--blue-dark) !important;
}

[success] .save.spin, [confirm] .save.spin {
    background-color: var(--green-dark) !important;
}

[warning] .save.spin, [caution] .save.spin, [prompt] .save.spin {
    background-color: var(--yellow-dark) !important;
}

[error] .save.spin, [danger] .save.spin {
    background-color: var(--red-dark) !important;
}

/* New/Beta sections */
#search-results section:is([new], [beta], [soon], [dead]) {
    border: 0;
}

section:is([new], [beta], [soon], [dead])::before {
    background-color: var(--baby-blue);
    border-radius: .25rem;
    color: var(--white);
    content: "New!";
    display: inline-block;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;

    line-height: 1;

    margin-top: 2.5rem;
    padding: .25rem .5rem;
    position: absolute;
    left: 0;
    top: -1rem;
}

section[beta]::before {
    background-color: var(--baby-pink);
    content: "BETA";
}

section[soon]::before {
    background-color: var(--baby-gold);
    content: "Coming soon";
}

section[dead]::before {
    background-color: var(--baby-grey);
    content: "Deprecated (" attr(dead) ")";
}

section:is([new], [beta], [soon], [dead])::after {
    content: '';

    background: linear-gradient(135deg, #0000 50%, var(--baby-blue) 0);
    display: block;

    left: 0;
    position: absolute;
    transform: translate(50%,100%) rotate(45deg);
    z-index: 9;

    height: 8px;
    width: 8px;
}

section[beta]::after {
    background: linear-gradient(135deg, #0000 50%, var(--baby-pink) 0);
}

section[soon]::after {
    background: linear-gradient(135deg, #0000 50%, var(--baby-gold) 0);
}

section[dead]::after {
    background: linear-gradient(135deg, #0000 50%, var(--baby-grey) 0);
}

/* Search for settings... */
#search-container {
    display: block !important;

    margin: 0 10rem !important;
    position: sticky !important;
    bottom: 0 !important;
    z-index: 99999;

    max-height: 80% !important;
    width: -webkit-fill-available !important;
    width: -moz-available !important;
    width: stretch !important;

    transition: all .5s;
}

#search-container:not([data-focus='true'i]) {
    margin: 0 1rem 0 85% !important;
}

#search-results {
    background-color: var(--black);
    border: 2px solid var(--grey);
    border-radius: 3px;
    overflow: hidden auto;

    bottom: 3rem;
    position: absolute;

    max-height: 30rem;
    width: -webkit-fill-available !important;
    width: -moz-available !important;
    width: stretch !important;
}

#search-container:not([data-focus='true'i]) #search-results {
    display: none;
    opacity: 0;
}

#search-results[data-empty='true'i] {
    padding: 1rem;
}

#search-results[data-empty='true'i]::before {
    content: 'Please enter a keyword... Press Esc to quit';
}

#search-results[data-empty='false'i]:empty::before {
    content: 'No results 😢';
}

#search-results > * {
    cursor: pointer !important;
    display: block !important;

    padding: 1rem !important;

    height: -moz-fit-content !important;

    height: fit-content !important;
    width: -webkit-fill-available !important;
    width: -moz-available !important;
    width: stretch !important;
}

#search-results > *:hover {
    background-color: var(--grey);
}

body.popup #search-results {
    max-height: 20rem !important;
}

body.popup #search-results[data-empty='true'i]::before {
    content: 'Start typing... Press Esc to quit';
}

body.popup #search-container:not([data-focus='true'i]) {
    margin: 0 3rem 0 75% !important;
}

/* Version button */
#version {
    text-align:right;

    opacity: .5;

    position: absolute;
    bottom: 0;
    right: 2.5rem;

    width: 100%;
}

#version[version]::after {
    content: 'v' attr(version);
}

/* Mini-display */
body.popup {
    padding-bottom: 2rem;
}

.popup .radio, .popup .toggle {
    line-height: 1rem;
}

.popup input[type="number"], .popup input[type="date"i], .popup input[type="time"i] {
    height: 1rem;
    width: 4rem;
}

.popup [fix-unit]::before {
    height: 1rem;
    width: 3rem;
}

.popup [unit]::after, .popup [pre-unit]::before, .popup [fix-unit]::before, .popup [fix-unit]::after {
    padding: calc(.1rem - 2px) calc(.5rem - 2px);

    position: initial;
    vertical-align: middle;
    top: 0;
}

.popup :is(#filter_rules, #phrase_rules, #lurking_rules) {
    /* height: 9rem; */
}

.popup section[save], body:not(.popup) #save {
    display: none;
}

.popup #save, #help {
    border-radius: 100%;

    padding: 1.5rem;

    position: fixed;
    bottom: 1rem;
    left: unset;
    right: 1rem;
    top: unset;

    height: 2.5rem;
    width: 2.5rem;

    z-index: 999;
}

.popup #save::before {
    border-bottom: 3px solid var(--text-light);
    border-left: 3px solid var(--text-light);
    content: '';
    display: block;

    transform: translate3d(-50%, -50%, 0) rotate(-45deg);

    position: absolute;
    left: 1.5rem;
    top: 1.4rem;

    height: .4rem;
    width: 1rem;
}

#help {
    background-color: var(--help-blue);

    left: 0;
}

#help::before {
    content: attr(glyph);
    display: block;
    font-size: 2rem;

    position: absolute;
    left: 0;
    top: 0;
    transform: translate(0%, 0%);

    height: -webkit-fill-available;
    width: -webkit-fill-available;
}

/* From Twitch */
/* Tooltips */
.tooltip-layer {
    pointer-events: none;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 999;
}

.tt-relative {
    position: relative !important;
}

.tt-inline-flex {
    display: inline-flex !important;
}
/* ... */

